# agentic-test

./: .containerignore  .gitignore  AGENT_GUIDELINES.md  AGENT_TASKS_V1.md  AGENT_WAVES.md  CONTRACT_V1.md  Containerfile  IMPLEMENTATION_PLAN.md  ISSUE_PACK.md  NEXT_STEPS.md  README.md  ambient_agent_history.md  ambient_agent_state.json  conftest.py  podman-ambient.ps1  pyproject.toml  requirements.txt
.github/issue-pack/: 00-phase-0-contracts-registries.md  01-agent-a-core-runtime.md  02-agent-b-data-persistence.md  03-agent-c-analysis-gateway.md  04-agent-d-policy-notifications.md  05-agent-e-operability-deploy.md  06-agent-f-test-ci.md  issues.json
.github/workflows/: ci.yml
contracts/: __init__.py  action_decision.py  canonical_event.py  changeset.py  knowledge_state.py
docs/: operations.md
docs/adr/: ADR-001-versioning-deprecation-policy.md
samples/: ambient_agent.py
scripts/: open-issues.ps1  podman-ambient.ps1  sync-issue-pack.ps1
src/ambient_agent/: __init__.py  cli.py  config.py  runtime.py  stages.py
src/ambient_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_runtime.py
tests/compatibility/: README.md
tests/contract/: README.md  test_action_decision.py  test_analysis_contract.py  test_canonical_event.py  test_changeset.py  test_compatibility.py  test_knowledge_state.py  test_registry.py
tests/loop/: README.md  test_loop_harness.py
tests/replay/: conftest.py  test_replay_harness.py
tests/unit/: conftest.py  test_agent_state.py  test_health.py  test_logging.py  test_metrics.py  (+2 more)
(+44 files in other folders)
